--- a/minexewgames-engine-public/package.json
+++ b/minexewgames-engine-public/package.json
@@ -8,7 +8,8 @@
         "Danol"
     ],
     "dependencies": {
-        "dlib": "~master"
+        "dlib": "0.10.1",
+        "undead": "1.0.8"
     },
     "subConfigurations": {
         "dlibnot": "import"
